> Updated YT description
> Added loop movement animation on background
> Remove the gap on the right side of the website
> Switch from tick on/off on settings into switch on/off

Jan 01, 2026
> Added slightly light blue on card on game list
> Added slightly dark brightness on background

Jan 02, 2026
> Added AI API status available (Info icon beside the "Jaymantrix AI" text)
> Jaymantrix AI knows the current date and time (Based on computer date and time, not based on live)
> Remove strict of 50 words limitation, but Jaymantrix AI response to 50 words when only short response, else it can response longer
> Added typewriter speed on settings, default interval time is 0.015s
> Added pop up notification modal with sound effect on the bottom right when API is switched

Jan 03, 2026
> Changed the AI model from "gemini-2.5-flash-lite-preview-09-2025" to "gemini-flash-lite-latest"
> Changed the notification modal exit from 10s to 5s
> Try to adjust AI system instruction for the AI first message
> Restructure the files
> Added category tabs for easier navigate games category
> Due to said AI response "AI temporarily unavailable due to quota. Please try again later." when the AI text detect the word "quota", "quota exceeded", and "rate limit". So I removed it.

Jan 05, 2026
> Changed category tabs design (Fixed on auto top when scroll down but fix is almost there!)
> Fixed horizontal scrollbar on category tabs not fully completed

Jan 06, 2026
> Added smooth movement of category tabs into top when scroll down
> Added marquee effect on the button "Chat with Jaymantrix AI"

Jan 07, 2026
> Added Vercel Web Analytics
> Changed the structure into React like Vite for routing.
> Adjust BG color on user chat bubbles and chat input

Jan 08, 2026
> Now supported routing link like "https://jaymantrix-website.vercel.app/notes" and "https://jaymantrix-website.vercel.app/chat"

Jan 09, 2026
> Added vertical marquee design on both left and right on the website